# server/docs/swagger.json
@@ -527,28 +527,11 @@
                 }
             }
         },
-        "data.OrderAssetVO": {
-            "type": "object",
-            "properties": {
-                "asset_id": {
-                    "type": "string"
-                },
-                "icon_url": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "symbol": {
-                    "type": "string"
-                }
-            }
-        },
         "data.OrderDetailVO": {
             "type": "object",
             "properties": {
                 "asset": {
-                    "$ref": "#/definitions/data.OrderAssetVO"
+                    "$ref": "#/definitions/data.AssetVO"
                 },
                 "created_at": {
                     "type": "integer"
@@ -569,6 +552,9 @@
                     "type": "string"
                 },
                 "quantity": {
+                    "type": "string"
+                },
+                "quote_id": {
                     "type": "string"
                 },
                 "status": {
@@ -599,8 +585,8 @@
         "data.OrderVO": {
             "type": "object",
             "properties": {
-                "asset_id": {
-                    "type": "string"
+                "asset": {
+                    "$ref": "#/definitions/data.AssetVO"
                 },
                 "created_at": {
                     "type": "integer"
